# openapi.yaml
@@ -583,12 +583,14 @@ paths:
             schema:
               type: object
               properties:
-                users:
+                lookupInfos:
                   type: array
                   items:
                     type: object
                     properties:
                       emailAddress:
+                        type: string
+                      phoneNumber:
                         type: string
                       userRecordName:
                         type: string
@@ -883,6 +885,13 @@ components:
           description: Record fields with their values and optional type information
           additionalProperties:
             $ref: '#/components/schemas/FieldValueResponse'
+        created:
+          $ref: '#/components/schemas/RecordTimestamp'
+        modified:
+          $ref: '#/components/schemas/RecordTimestamp'
+        deleted:
+          type: boolean
+          description: Whether the record was deleted
 
     FieldValueRequest:
       type: object
@@ -1166,6 +1175,8 @@ components:
                 $ref: '#/components/schemas/ZoneID'
         syncToken:
           type: string
+        moreComing:
+          type: boolean
 
     SubscriptionsListResponse:
       type: object
@@ -1191,8 +1202,72 @@ components:
           items:
             $ref: '#/components/schemas/Subscription'
 
+    RecordTimestamp:
+      type: object
+      description: Timestamp information for record creation or modification
+      properties:
+        timestamp:
+          type: number
+          description: Unix timestamp in milliseconds
+        userRecordName:
+          type: string
+          description: Record name of the user who performed the action
+
+    NameComponents:
+      type: object
+      description: The parts of a user's name
+      properties:
+        namePrefix:
+          type: string
+          description: The user's name prefix
+        givenName:
+          type: string
+          description: The user's first name
+        middleName:
+          type: string
+          description: The user's middle name
+        familyName:
+          type: string
+          description: The user's last name
+        nameSuffix:
+          type: string
+          description: The user's name suffix
+        nickname:
+          type: string
+          description: The user's nickname
+        phoneticRepresentation:
+          type: string
+          description: A phonetic representation of the user's name
+
+    UserIdentityLookupInfo:
+      type: object
+      description: Information used to look up a user identity
+      properties:
+        emailAddress:
+          type: string
+          description: The user's email address
+        phoneNumber:
+          type: string
+          description: The user's phone number
+        userRecordName:
+          type: string
+          description: The record name of the user
+
+    UserIdentity:
+      type: object
+      description: A user identity returned by discover endpoints
+      properties:
+        userRecordName:
+          type: string
+          description: The record name of the user
+        nameComponents:
+          $ref: '#/components/schemas/NameComponents'
+        lookupInfo:
+          $ref: '#/components/schemas/UserIdentityLookupInfo'
+
     UserResponse:
       type: object
+      description: A user returned by current/lookup endpoints (User Dictionary)
       properties:
         userRecordName:
           type: string
@@ -1209,16 +1284,7 @@ components:
         users:
           type: array
           items:
-            type: object
-            properties:
-              userRecordName:
-                type: string
-              firstName:
-                type: string
-              lastName:
-                type: string
-              emailAddress:
-                type: string
+            $ref: '#/components/schemas/UserIdentity'
 
     ContactsResponse:
       type: object
